    Basic: StopGrid
    Grid: Waves3D, FlipX3D, FlipY3D, Lens3D, Ripple3D, Liquid, Shaky3D, Waves, Twirl
	Tiled: ShakyTiles3D, ShatteredTiles3D, ShuffleTiles, FadeOutTRTiles, FadeOutBLTiles,
	       FadeOutUpTiles, FadeOutDownTiles, TurnOffTiles, WavesTiles3D, JumpTiles3D,
		   SplitRows, SplitCols
	(issue #183)
 . Atlas: Works when GL_CULL_FACE is enabled (issue #179)
 . CocosLive: added client and example that uses the CocosLive service (issue #175)
 . CocosNode: children is a property (issue #185)
 . Demos: Creating Window and attaching cocos2d to it (issue #180)
 . Demos: Texture2dDemo shows how to load PVR images (issue #112)
 . Director: OpenGLview is attached to a given UIView/UIWindow (issue #180)
 . Director: winSize returns a CGSize (not a CGRect) (issue #159)
 . Director: added FastDirector (issue #145)
 . Director: dispatch missing events in main loop (issue #146)
 . Director: renamed runScene with runWithScene (issue #194)
 . Effects: Added Effects support (Grid and TiledGrid) (issue #183)
 . Experimental: Added StreakDemo (issue #171)
 . Menu: aligItemsVerticallyOld removed. (issue #196)
 . MenuItemFont: assign correct size and documented isEnabled (issue #132)
 . Sprite: initWithPVRTCFile is deprecated. will be removed in v0.8 (issue #197)
 . Texture: Support for full PVRTC (issue #112)
 . Transitions: added new transitions: 
	 SplitRowsTransition, SplitColsTransition, TurnOffTilesTransition,
	 FadeTRTransition, FadeBLTransition, FadeUpTransition, FadeDownTransition
     (issue #187)

 
version 0.6.3 - 28-Jan-2009
 . Actions: ScaleTo & ScaleBy supports X and Y factors (issue #156)
 . Actions: Added collections of Ease Actions (issue #157)
 . Chipmunk: cpFlaot is a float, not a double (issue #130)
 . CocosNode: fixed absolutePosition (issue #140)
 . CocosNode: unschedule timers only when running (issue #142)
 . CocosNode: prevents crash under certain circumstances while executing actions (issue #141)
 . Demos: Added Texture2dDemo example (issue #169)