@@ -8,6 +8,7 @@ version 0.7.0 - XX-Feb-2009
 		   SplitRows, SplitCols
 	(issue #183)
  . Atlas: Works when GL_CULL_FACE is enabled (issue #179)
+ . Atlas: updateAltasValues renamed to updateAtlasValues (issue #198)
  . CocosLive: added client and example that uses the CocosLive service (issue #175)
  . CocosNode: children is a property (issue #185)
  . Demos: Creating Window and attaching cocos2d to it (issue #180)
@@ -23,6 +24,7 @@ version 0.7.0 - XX-Feb-2009
  . MenuItemFont: assign correct size and documented isEnabled (issue #132)
  . Sprite: initWithPVRTCFile is deprecated. will be removed in v0.8 (issue #197)
  . Texture: Support for full PVRTC (issue #112)
+ . Texture: Easier to set Alias and/or AntiAlias texture parameters (issue #135 and issue #47)
  . Transitions: added new transitions: 
 	 SplitRowsTransition, SplitColsTransition, TurnOffTilesTransition,
 	 FadeTRTransition, FadeBLTransition, FadeUpTransition, FadeDownTransition
